--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ a.middle:before {
     content: "";
     position: absolute;
     width: 100%;
-    height: 2px;
+    height: 3px;
     bottom: 0;
     left: 0;
     background-color: rgb(42, 13, 97);
@@ -49,7 +49,6 @@ a.middle:hover:before {
 
 .section1 {
     background-color: rgb(20, 11, 80);
-    ;
 }
 
 .vimg {
@@ -212,6 +211,144 @@ div.searchbuttons a:hover {
     background-color: rgb(255, 255, 255);
     color: rgb(45, 13, 121);
     border: 3px solid rgb(20, 11, 80);
+}
+
+
+/* ----------------dsection1---------------------- */
+
+.dsection1 {
+    padding: 40px;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(226, 222, 222);
+}
+
+.quote {
+    margin: auto;
+    padding: 20px;
+}
+
+div.case h2 {
+    color: rgb(17, 16, 16);
+    font-weight: bold;
+    margin: auto;
+    padding: 10px;
+}
+
+div.today h2 {
+    color: rgb(192, 8, 2);
+    font-weight: bold;
+    margin: auto;
+    padding: 10px;
+}
+
+.counter {
+    background-color: #eaecf0;
+    text-align: center;
+}
+
+.cases {
+    margin: auto;
+}
+
+.counter-count {
+    font-size: 28px;
+    font-weight: bold;
+    background-color: #0a0b58;
+    border-radius: 50%;
+    color: #ffffff;
+    text-align: center;
+    line-height: 142px;
+    width: 142px;
+    height: 142px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: inline-block;
+}
+
+div.cases p:hover {
+    font-size: 36px;
+    font-weight: bold;
+    background-color: #0a0b58;
+    border-radius: 50%;
+    color: #ffffff;
+    text-align: center;
+    line-height: 182px;
+    width: 182px;
+    height: 182px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: inline-block;
+}
+
+
+/* -------------------dsection2------------------- */
+
+.dsection2 {
+    padding: 40px;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(226, 222, 222);
+}
+
+.vcount {
+    margin: auto;
+    padding: 20px;
+}
+
+div.vbox {
+    background-color: #ffffff;
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, .15), 10px 12px 7px 0 rgba(0, 0, 0, .14);
+    border-radius: 3px;
+    text-align: center;
+    align-items: flex-start;
+    justify-content: space-between;
+    /* margin: 20px; */
+    padding: 20px 20px 20px 20px;
+}
+
+g text {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+div.vboxscroll {
+    background-color: #ffffff;
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, .15), 10px 12px 7px 0 rgba(0, 0, 0, .14);
+    border-radius: 3px;
+    text-align: center;
+    align-items: flex-start;
+    justify-content: space-between;
+    /* margin: 20px; */
+    padding: 20px 20px 20px 20px;
+    overflow: auto;
+    overflow-x: hidden;
+    height: 240px;
+}
+
+div.vboxscroll p {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+div.states p {
+    color: rgb(42, 20, 105);
+}
+
+div.number p {
+    color: rgb(16, 129, 73);
+}
+
+div.states {
+    text-align: left;
+}
+
+div.number {
+    text-align: right;
 }
 
 
