--- a/main.css
+++ b/main.css
@@ -224,7 +224,7 @@ div.searchbuttons a:hover {
     border: 2px solid white;
 }
 
-p.searchm {
+h6.searchm {
     color: red;
 }
 
@@ -392,6 +392,163 @@ div.dsection3 label {
 }
 
 
+/* -------------------lsection1------------------ */
+
+.lsection1 {
+    padding: 40px;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(226, 222, 222);
+}
+
+.container.login-container {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.card {
+    border: 3px solid rgb(16, 16, 110);
+    border-radius: 20px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.card.loginin-card {
+    padding: 40px 0px 20px;
+    background-color: #f5f5f5;
+}
+
+img.login-img {
+    padding: 0 2rem 2rem;
+    margin: auto;
+    display: block;
+    width: 90%;
+}
+
+h5.welcome {
+    font-weight: 500;
+    color: rgb(18, 11, 122);
+}
+
+h6.welcome {
+    font-weight: 500;
+    color: rgb(18, 11, 122);
+}
+
+h6.welcomep {
+    font-weight: 500;
+    color: rgb(228, 152, 11);
+}
+
+h6.welcomeu {
+    font-weight: 300;
+    font-size: 13px;
+    color: rgb(124, 120, 113);
+}
+
+form.login-form {
+    max-width: 250px;
+    margin: auto;
+}
+
+input.form-control {
+    background-color: #e9e9e9;
+}
+
+::placeholder {
+    font-size: 14px;
+}
+
+button.login-button {
+    width: 100%;
+    color: white;
+    background-color: rgb(8, 8, 75);
+}
+
+p.line {
+    width: 80%;
+    text-align: center;
+    border-bottom: 0.5px groove grey;
+    line-height: 0.1em;
+    margin: auto;
+}
+
+p span {
+    font-size: 12px;
+    font-weight: bold;
+    color: grey;
+    background-color: white;
+    padding: 0 10px;
+}
+
+.facebook {
+    text-align: center;
+    padding-top: 1px;
+}
+
+img.fb {
+    margin: auto;
+    width: 6%;
+    overflow: auto;
+}
+
+a {
+    font-size: 15px;
+    font-weight: bold;
+    color: #385185;
+    line-height: 1em;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a.frgt-pswd {
+    font-size: 12px;
+    font-weight: normal;
+    color: #385185;
+}
+
+
+/* ----------------verify------------------------- */
+
+.vsection1 {
+    padding: 40px;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(248, 244, 244);
+}
+
+.verification {
+    margin: auto;
+}
+
+.medal {
+    width: 25%;
+    margin: auto;
+}
+
+.verifybuttonstyle {
+    background-color: rgb(21, 10, 83);
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, .15), 10px 12px 7px 0 rgba(0, 0, 0, .14);
+    color: rgb(253, 253, 253);
+    font-weight: 500;
+    border-radius: 10px;
+    margin: auto;
+}
+
+.btn:hover {
+    background-color: rgb(255, 255, 255);
+    color: rgb(45, 13, 121);
+    border: 3px solid rgb(20, 11, 80);
+}
+
+.vcontent {
+    text-align: left;
+}
+
+
 /* ---------------CUSTOM RESPONSIVE-------------- */
 
 @media screen and (max-width:680px) {
@@ -415,5 +572,15 @@ div.dsection3 label {
         margin: auto;
         padding: 0px;
         padding-top: 30px;
+    }
+    img.login-img {
+        padding: 0 2rem 2rem;
+        margin: auto;
+        display: block;
+        width: 100%;
+    }
+    .medal {
+        width: 50%;
+        margin: auto;
     }
 }
